tests/integration/tests/check_commands/CHECK-NOT/one_string/negative/01-negative_match/sample.itest
; RUN: %cat "%S/filecheck.input" | %expect_exit 1 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --strict-whitespace --match-full-lines

; CHECK:{{^.*}}filecheck.check:1:14: error: CHECK-NOT: excluded string found in input{{$}}
; CHECK-NEXT:; CHECK-NOT: hello
; CHECK-NEXT:             ^
; CHECK-NEXT:<stdin>:1:1: note: found here
; CHECK-NEXT:hello
; CHECK-NEXT:^~~~~
; CHECK-EMPTY:
